# nubster-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ai-review.yml  ci.yml
src/: cli.rs  config.rs  error.rs  main.rs  output.rs
src/api/: client.rs  mod.rs  repo.rs
src/auth/: token_store.rs
src/commands/: auth.rs  config.rs  mod.rs
src/commands/scm/: repo.rs
src/git/: credential.rs  mod.rs
tests/: auth.rs  cli.rs  config.rs  git.rs  repo.rs  version.rs
