[package]
name = "nub"
version = "0.1.0"
edition = "2021"
description = "Unified command-line client for the Nubster platform, starting with sovereign source control."
license = "MIT"
repository = "https://github.com/nubster-opensources/nubster-cli"
readme = "README.md"
publish = false

[[bin]]
name = "nub"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
] }

[dev-dependencies]
tempfile = "3"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
